--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,11 @@ dependencies {
     compile group: 'org.apache.zookeeper', name: 'zookeeper', version: '3.5.5'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    // compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.19.v20190610'
+    // compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.19.v20190610'
+    compile('org.apache.curator:curator-framework:4.2.0') {
+        exclude group: 'org.apache.zookeeper', module: 'zookeeper'
+    }
 }
 
 compileKotlin {
